kubernetes/infra/flux/app/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ENC[AES256_GCM,data:8k0Cz9e3Vg03BqLXMBuTofI1Vnyhwb5hU500rGg5Zj/O6uX3Iymy9AJZYMNeNKAVws6JAGPKzU3p,iv:AjEl0phkFzy9cqYTTkrj/dFP7IR2VkxayDEdrrdYdPc=,tag:BBXI/aj3gSwh8piZqPYIVQ==,type:str]
      secretName: flux-webhook-tls-secret
  rules:
    - host: ENC[AES256_GCM,data:nXToyqVjDjihQSV6XlQbPkUmNl2t5JtQFptVeMie3XxMAx7mLY12I7O60QppgYoLwsG9apYQFbVR,iv:Pd9y0sPyTHXAYCftxjs3c5x6mTXBsW3gxPcLj2+GnFI=,tag:SBEUrkmexFao4boDt3gOBA==,type:str]
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
sops:
  lastmodified: "2025-05-10T21:07:04Z"
  mac: ENC[AES256_GCM,data:BBIoSNCSbGgS/+GKj764ovdlnKpPVC3O6XLwOfgSjIHfxNoQjdCCcTPBdYTGgVYv+9CJfYiWeUz2zo0rIyRNVvbiB4Cctv7Nmt8OBQmCrfsmFF9CX8W0de+51YDTSxhKeUx4Dl1oA6jipzr4SW0yA5SZ34DeGL5SDzIQ2henVoY=,iv:RPMDW4UUsT4NuMC4OSVPTTxH49SN0l30Fdyf254IQ+w=,tag:/BDzjV2FtY9Q2rPu1FWH2Q==,type:str]
  pgp:
    - created_at: "2025-05-10T21:07:04Z"
      enc: |-
        -----BEGIN PGP MESSAGE-----

        hQIMA1q7zTHG2LSZAQ/+MvEP9mThAcFR6HM35s1E4ZK6PBhJMoczBtTrJ09DyKAa
[...]
        mIWZapXruQM+
        =2Gru
        -----END PGP MESSAGE-----
      fp: 733981EC713BBFDBAAD9E5FB77E29A7F07D187AC
  encrypted_regex: ^(data|stringData|email|addresses|dnsNames|host|hosts)$
  version: 3.10.2
